Finish EW host projection sprint: Expand trading, phiDeltas, MCMC, demos.
Wire PSHost aux columns into Expand/Fitness, soft phi gene variation, pragmatic McmcForecastHost, and CLI + JVM GUI viz (SwingExterns / CorpusEvoRun --gui stack).